--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
+    "start": webpack
   },
   "author": "",
   "license": "ISC",
