--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "webpack -p --config ./webpack.config.js --progress",
-    "start": webpack
+    "start": "webpack"
   },
   "author": "",
   "license": "ISC",
