--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack"
+      "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress --colors",
+      "start": "webpack"
   },
   "author": "",
   "license": "ISC",
