--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "NODE_ENV=production webpack --config ./webpack.config.js --progress --colors",
-      "start": "webpack"
+    "build": "rm -rf dist/*; cp index.html dist/; webpack;"
   },
   "author": "",
   "license": "ISC",
